# hermes-workbench-

./: .dockerignore  .env.example  .gitignore  .gitmodules  CODE_WIKI.md  Dockerfile  README.md  docker-compose.yml  manifest.json  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
.loops/test-bc-no-fence/: LOOP.md  STATE.md  builder.md  checker.md  loop-budget.md  meta.json  stop-rules.md
.loops/test-budget-priority/: LOOP.md  STATE.md  loop-budget.md  meta.json
.loops/test-continuous-budget/: LOOP.md  STATE.md  loop-budget.md  meta.json
.loops/test-mp-anti-fence/: LOOP.md  STATE.md  loop-budget.md  meta.json  perspective.md  summary.md
.loops/test-mp-claim/: LOOP.md  STATE.md  loop-budget.md  meta.json  perspective.md  summary.md
.loops/test-mp-claim-audit/: LOOP.md  STATE.md  loop-budget.md  meta.json  perspective.md  report.md  summary.md
.loops/test-mp-claim-ok/: LOOP.md  STATE.md  loop-budget.md  meta.json  perspective.md  report.md  summary.md
.loops/test-mp-conclusion/: LOOP.md  STATE.md  loop-budget.md  meta.json  perspective.md  summary.md
.loops/test-mp-conclusion-ok/: LOOP.md  STATE.md  loop-budget.md  meta.json  perspective.md  summary.md
content-creation/: 00-90天冷启动落地计划.md  01-前30天选题库.md  first-post.md
data/: profile.example.json
knowledge/: evaluator-subagent-template.md  harness-engineering.md  memory-model.md  skill-and-loop.md
prototype/: index.html  style-samples.html
tests/: conftest.py  test_config.py  test_logging.py  test_main.py  test_profile.py  test_registry.py  test_skills.py
(+213 files in other folders)
